--- a/client/.gitignore
+++ b/client/.gitignore
@@ -12,6 +12,10 @@ dist
 dist-ssr
 *.local
 
+# Local environment files
+.env
+.env.*.local
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,3 +26,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# System files
+.DS_Store
+Thumbs.db
+ehthumbs.db
+Icon?
+Desktop.ini
