--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,15 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@clerk/express": "^1.7.63",
     "@neondatabase/serverless": "^1.0.2",
     "axios": "^1.12.2",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "openai": "^6.16.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
